[package]
name = "derive-serialize-into"
version = "0.3.1"
authors = ["Andreas Fackler <Andreas.Fackler@49nord.de>"]
description = "Derive Serialize and Deserialize for validating wrapper types"
repository = "https://github.com/afck/derive-serialize-into"
license = "MIT"
readme = "README.md"
keywords = ["serde", "serialization", "validation", "wrapper"]
categories = ["encoding"]

[lib]
proc-macro = true

[dependencies]
syn = "0.13.1"
quote = "0.5.1"

[dev-dependencies]
lazy_static = "1.0.0"
regex = "0.2.10"
serde = "1.0.37"
serde_derive = "1.0.37"
serde_json = "1.0.13"
try_from = "0.2.2"
validator = "0.6.3"
